recursion.lessons.recursion.koch.Koch.scala.error
Koch:26: error: ';' expected but ')' found.
		snowside(l=l-1,length))}
                                      ^